--- a/index.html
+++ b/index.html
@@ -894,6 +894,37 @@
 				</div>
 			</div>
 		</div><!-- End python -->
+		<div class="col-sm-12 col-md-4">
+			<div class="progress-wrap">
+				<h3 class="wow slideInRight animated" data-wow-duration="700ms">Vue Js</h3>
+				<div class="row">
+					<div class="col-xs-3">
+						<small>Beginner</small>
+						<div class="progress">
+							<div class="progress-bar color6 wow fadeInLeft animated" data-wow-duration="700ms" data-wow-delay="500ms" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+						</div>
+					</div>
+					<div class="col-xs-3">
+						<small>Intermediate</small>
+						<div class="progress">
+							<div class="progress-bar color6 wow fadeInLeft animated" data-wow-duration="700ms" data-wow-delay="500ms" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%"></div>
+						</div>
+					</div>
+					<div class="col-xs-3">
+						<small>Advance</small>
+						<div class="progress">
+							<div class="progress-bar color6 wow fadeInLeft animated" data-wow-duration="700ms" data-wow-delay="500ms" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+						</div>
+					</div>
+					<div class="col-xs-3">
+						<small>Expert</small>
+						<div class="progress">
+							<div class="progress-bar color6 wow fadeInLeft animated" data-wow-duration="700ms" data-wow-delay="500ms" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width: 0%"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </div>
 
